adicionando novas pages

--- a/controle-mercadoria/index.html
+++ b/controle-mercadoria/index.html
@@ -10,27 +10,45 @@
 </head>
 
 <body>
+
     <h1>Controle de mercadorias</h1>
 
-    <div id="container">
-        <div class="page" style="background-color: #ffcccc;">Página 1</div>
-        <div class="page" style="background-color: #ccffcc;">Página 2</div>
-        <div class="page" style="background-color: #ccccff;">Página 3</div>
-        <div class="page" style="background-color: #ffffcc;">Página 4</div>
-        <div class="page" style="background-color: #ffccff;">Página 5</div>
-        <div class="page" style="background-color: #ccffff;">Página 6</div>
-        <div class="page" style="background-color: #cccccc;">Página 7</div>
-    </div>
 
     <div id="selectors">
-        <div class="selector" onclick="scrollToPage(0)">Página 1</div>
-        <div class="selector" onclick="scrollToPage(1)">Página 2</div>
-        <div class="selector" onclick="scrollToPage(2)">Página 3</div>
-        <div class="selector" onclick="scrollToPage(3)">Página 4</div>
-        <div class="selector" onclick="scrollToPage(4)">Página 5</div>
-        <div class="selector" onclick="scrollToPage(5)">Página 6</div>
-        <div class="selector" onclick="scrollToPage(6)">Página 7</div>
+        <!-- Adicionar novos seletores (de 8 a 14) -->
+        <span class="selector" onclick="scrollToPage(0)">Costela</span>
+        <span class="selector" onclick="scrollToPage(1)">C.Assada</span>
+        <span class="selector" onclick="scrollToPage(2)">S.Coxa</span>
+        <span class="selector" onclick="scrollToPage(3)">Strogonoff</span>
+        <span class="selector" onclick="scrollToPage(4)"></span>
+        <span class="selector" onclick="scrollToPage(5)">Ervilha</span>
+        <span class="selector" onclick="scrollToPage(6)"></span>
+        <span class="selector" onclick="scrollToPage(7)">Dobradinha</span>
+        <span class="selector" onclick="scrollToPage(8)"></span>
+        <span class="selector" onclick="scrollToPage(9)">F.Normal</span>
+        <span class="selector" onclick="scrollToPage(10)"></span>
+        <span class="selector" onclick="scrollToPage(11)">FArofa</span>
+        <span class="selector" onclick="scrollToPage(12)"></span>
+        <span class="selector" onclick="scrollToPage(13)">Maionese</span>
     </div>
+
+    <div id="container">
+        <div class="page" style="background-color: #ffcccc;">Costela</div>
+        <div class="page" style="background-color: #ccffcc;">Caldo Verde</div>
+        <div class="page" style="background-color: #ccccff;">Mocotó</div>
+        <div class="page" style="background-color: #ffffcc;">Arroz</div>
+        <div class="page" style="background-color: #ffccff;">Carne Assada</div>
+        <div class="page" style="background-color: #cccccc;">Ervilha</div>
+        <div class="page" style="background-color: #ccffff;">Caldo de Abobora</div>
+        <div class="page" style="background-color: #cccccc;">Dobradinha</div>
+        <div class="page" style="background-color: #cccccc;">Sobre-coxa</div>
+        <div class="page" style="background-color: #cccccc;">Feijão Normal</div>
+        <div class="page" style="background-color: #cccccc;">Feijoada</div>
+        <div class="page" style="background-color: #cccccc;">Farofa</div>
+        <div class="page" style="background-color: #cccccc;">Strogonoff</div>
+        <div class="page" style="background-color: #cccccc;">Maionese</div>
+    </div>
+
 
 </body>
 
