--- a/controle-mercadoria/index.html
+++ b/controle-mercadoria/index.html
@@ -17,14 +17,14 @@
     <div id="selectors">
         <!-- Adicionar novos seletores (de 8 a 14) -->
         <span class="selector" onclick="scrollToPage(0)">Costela</span>
-        <span class="selector" onclick="scrollToPage(1)">C.Assada</span>
-        <span class="selector" onclick="scrollToPage(2)">S.Coxa</span>
+        <span class="selector" onclick="scrollToPage(1)">C.Verde</span>
+        <span class="selector" onclick="scrollToPage(2)">Mocotó</span>
         <span class="selector" onclick="scrollToPage(3)">Strogonoff</span>
-        <span class="selector" onclick="scrollToPage(4)"></span>
+        <span class="selector" onclick="scrollToPage(4)">C.Assada</span>
         <span class="selector" onclick="scrollToPage(5)">Ervilha</span>
-        <span class="selector" onclick="scrollToPage(6)"></span>
+        <span class="selector" onclick="scrollToPage(6)">C.Abobora</span>
         <span class="selector" onclick="scrollToPage(7)">Dobradinha</span>
-        <span class="selector" onclick="scrollToPage(8)"></span>
+        <span class="selector" onclick="scrollToPage(8)">S.</span>
         <span class="selector" onclick="scrollToPage(9)">F.Normal</span>
         <span class="selector" onclick="scrollToPage(10)"></span>
         <span class="selector" onclick="scrollToPage(11)">FArofa</span>
