--- a/controle-mercadoria/index.html
+++ b/controle-mercadoria/index.html
@@ -17,18 +17,18 @@
     <div id="selectors">
         <!-- Adicionar novos seletores (de 8 a 14) -->
         <span class="selector" onclick="scrollToPage(0)">Costela</span>
-        <span class="selector" onclick="scrollToPage(1)">C.Verde</span>
-        <span class="selector" onclick="scrollToPage(2)">Mocotó</span>
-        <span class="selector" onclick="scrollToPage(3)">Strogonoff</span>
         <span class="selector" onclick="scrollToPage(4)">C.Assada</span>
+        <span class="selector" onclick="scrollToPage(8)">S.Coxa</span>
+        <span class="selector" onclick="scrollToPage(12)">Strogonoff</span>
         <span class="selector" onclick="scrollToPage(5)">Ervilha</span>
+        <span class="selector" onclick="scrollToPage(1)">C.Verde</span>
         <span class="selector" onclick="scrollToPage(6)">C.Abobora</span>
         <span class="selector" onclick="scrollToPage(7)">Dobradinha</span>
-        <span class="selector" onclick="scrollToPage(8)">S.</span>
+        <span class="selector" onclick="scrollToPage(2)">Mocotó</span>
         <span class="selector" onclick="scrollToPage(9)">F.Normal</span>
-        <span class="selector" onclick="scrollToPage(10)"></span>
-        <span class="selector" onclick="scrollToPage(11)">FArofa</span>
-        <span class="selector" onclick="scrollToPage(12)"></span>
+        <span class="selector" onclick="scrollToPage(10)">Feijoada</span>
+        <span class="selector" onclick="scrollToPage(11)">Farofa</span>
+        <span class="selector" onclick="scrollToPage(3)">Arroz</span>
         <span class="selector" onclick="scrollToPage(13)">Maionese</span>
     </div>
 
@@ -40,8 +40,8 @@
         <div class="page" style="background-color: #ffccff;">Carne Assada</div>
         <div class="page" style="background-color: #cccccc;">Ervilha</div>
         <div class="page" style="background-color: #ccffff;">Caldo de Abobora</div>
-        <div class="page" style="background-color: #cccccc;">Dobradinha</div>
-        <div class="page" style="background-color: #cccccc;">Sobre-coxa</div>
+        <div class="page" style="background-color: #cceecc;">Dobradinha</div>
+        <div class="page" style="background-color: #cccaaa;">Sobre-coxa</div>
         <div class="page" style="background-color: #cccccc;">Feijão Normal</div>
         <div class="page" style="background-color: #cccccc;">Feijoada</div>
         <div class="page" style="background-color: #cccccc;">Farofa</div>
