--- a/controle-mercadoria/index.html
+++ b/controle-mercadoria/index.html
@@ -42,11 +42,11 @@
         <div class="page" style="background-color: #ccffff;">Caldo de Abobora</div>
         <div class="page" style="background-color: #cceecc;">Dobradinha</div>
         <div class="page" style="background-color: #cccaaa;">Sobre-coxa</div>
-        <div class="page" style="background-color: #cccccc;">Feijão Normal</div>
-        <div class="page" style="background-color: #cccccc;">Feijoada</div>
-        <div class="page" style="background-color: #cccccc;">Farofa</div>
-        <div class="page" style="background-color: #cccccc;">Strogonoff</div>
-        <div class="page" style="background-color: #cccccc;">Maionese</div>
+        <div class="page" style="background-color: #aaaccc;">Feijão Normal</div>
+        <div class="page" style="background-color: #ffaccc;">Feijoada</div>
+        <div class="page" style="background-color: #cccc11;">Farofa</div>
+        <div class="page" style="background-color: #cccfea;">Strogonoff</div>
+        <div class="page" style="background-color: #cffaac;">Maionese</div>
     </div>
 
 
